update register html

--- a/mobile/src/app/register/register.page.html
+++ b/mobile/src/app/register/register.page.html
@@ -21,13 +21,13 @@
         <form >
         
           <div class="input one">
-              <ion-input formControlName="name" expand="block" class="name" type="text" name="name" placeholder="Name"></ion-input>
+              <ion-input  expand="block" class="name" type="text" name="name" placeholder="Name"></ion-input>
           </div>
           <div class="input two">
-          <ion-input formControlName="email" expand="block" class="email" type="email" name="email" placeholder="Email"></ion-input>
+          <ion-input  expand="block" class="email" type="email" name="email" placeholder="Email"></ion-input>
           </div>
           <div class="input three">
-          <ion-input formControlName="pwd" expand="block" class="password" type="password" name="password" placeholder="Password"></ion-input>
+          <ion-input expand="block" class="password" type="password" name="password" placeholder="Password"></ion-input>
           </div>
         </form>
       </ion-col>
