Update routerLink between the login and register pages

--- a/mobile/src/app/login/login.page.html
+++ b/mobile/src/app/login/login.page.html
@@ -62,7 +62,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <div class="text noAccount">Don't have an account? <a> SIGN UP</a> </div>
+        <div class="text noAccount">Don't have an account? <a routerLink="/register"> SIGN UP</a> </div>
       </ion-col>
     </ion-row>
   </ion-grid>
