update the logo (html and css) files

--- a/mobile/src/app/login/login.page.html
+++ b/mobile/src/app/login/login.page.html
@@ -8,7 +8,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <img class="logo" src="/assets/icon/grocera-logo.png" alt="">
+        <img class="logo" src="/assets/icon/new-logo.png" alt="">
       </ion-col>
     </ion-row>
     <ion-row>
