--- a/mobile/src/app/components/search/search.component.html
+++ b/mobile/src/app/components/search/search.component.html
@@ -1,14 +1,14 @@
 
 <div class="search">
   <ion-icon slot="icon-only" name="search"></ion-icon>
-  <input (keyup)="onSearch($event)" (focus)="onInputFocus()" (blur)="onInputBlur()" type="search" placeholder="Search"/>
+  <input type="search" placeholder="Search"/>
 
 </div>
 
 <!-- Display Search Results -->
 <div class="search-menu" *ngIf="showResults">  
   <ion-list *ngIf="searchResults.length > 0">
-  <ion-item *ngFor="let result of searchResults" (click)="gotodetails(result)">
+  <ion-item *ngFor="let result of searchResults">
     <div class="text">
       {{ result.name }} 
     </div>
