--- a/mobile/src/app/login/login.page.html
+++ b/mobile/src/app/login/login.page.html
@@ -18,12 +18,12 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <form >
+        <form (submit)="login()" >
           <div class="input one"> 
-            <ion-input  expand="block" class="email" type="email" name="email" placeholder="Email"></ion-input>
+            <ion-input [(ngModel)]="formData.email"  expand="block" class="email" type="email" name="email" placeholder="Email"></ion-input>
           </div>
           <div class="input two">
-            <ion-input expand="block" class="password" type="password" name="password" placeholder="Password"></ion-input>
+            <ion-input [(ngModel)]="formData.pwd" expand="block" class="password" type="password" name="password" placeholder="Password"></ion-input>
           </div>
         </form>
 
