update login button

--- a/mobile/src/app/login/login.page.html
+++ b/mobile/src/app/login/login.page.html
@@ -42,7 +42,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button  class="login-btn" expand="block" fill="clear" shape="round">
+        <ion-button (click)="login()" class="login-btn" expand="block" fill="clear" shape="round">
           Log in
         </ion-button>
       </ion-col>
