--- a/mobile/src/app/pages/detailspage/detailspage.page.html
+++ b/mobile/src/app/pages/detailspage/detailspage.page.html
@@ -1,13 +1,87 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>detailspage</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">detailspage</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <div class="product-img">
+
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row class="outer-wrapper">
+      <ion-col size-md="12" >
+        <ion-item class="wrapper-1">
+          <div class="item">
+            <div class="item-name">Product Name</div>
+            <div class="item-price">1kg, $4.99</div>
+          
+          </div>
+        
+          <ion-icon name="heart-outline" slot="end"></ion-icon>
+        </ion-item>
+        <ion-item class="wrapper-2">
+          <div class="quantity" slot="start">
+            <ion-icon name="remove-outline"></ion-icon>
+      
+            <div class="rectangle">
+              <div class="no">1</div>
+            </div>
+      
+            <ion-icon name="add-outline"></ion-icon>
+          </div>
+          <div class="price" slot="end">
+            $4.99
+          </div>
+        </ion-item>
+        
+        <div class="wrapper-3">
+          <img class="vector" src="assets/vector-line.svg" />
+          <div class="details">
+            <div class="title">
+              Product Details
+            </div>
+            <div class="content">
+              Apples Are Nutritious. Apples May Be Good For Weight Loss. Apples May Be Good For Your Heart. As Part Of A Healtful And Varied Diet.
+            </div>
+            
+
+          </div>
+
+          <div class="more">
+            <div class="title">
+              More
+            </div>
+          
+          </div>
+
+          
+         
+        
+        </div>
+       
+      </ion-col>
+        
+    </ion-row>
+        
+    
+  </ion-grid>
+ 
 </ion-content>
+<ion-footer class="ion-padding"  class="ion-no-border">
+  <div class="footer-wrapper" >
+    <div class="total-wrapper">
+      <div class="title">Price Total</div>
+      <div class="price">
+        $8.49
+      </div>
+    </div>
+    <div class="btn">
+      <ion-button expand="block">
+        Add to Cart
+      </ion-button>
+    </div>
+   
+  </div>
+  
+</ion-footer>
