Wishlist tab ts

--- a/mobile/src/app/components/product-card/product-card.component.html
+++ b/mobile/src/app/components/product-card/product-card.component.html
@@ -4,7 +4,7 @@
         {{item.discount+'%'}}
       </div>
       <div class="image_wrapper">
-        <img class="item-img" src="item.img" />
+        <img class="item-img" src={{item.img}} />
         <app-liked class="like" [item]="item" ></app-liked>   
       </div> 
       <ion-card-content >
