create account page

--- a/mobile/src/app/pages/hometab/hometab.page.html
+++ b/mobile/src/app/pages/hometab/hometab.page.html
@@ -88,7 +88,7 @@
         </div>
         <div class="scroll" *ngIf="isLoading">
           <div class="itemdiv" *ngFor="let i of onSale" >
-            <!-- <app-product-card [item]="i" [style]="'home'"></app-product-card> -->
+            <app-product-card [item]="i" [style]="'home'"></app-product-card> 
           </div>
         </div>
         
