--- a/mobile/src/app/pages/cart/cart.page.scss
+++ b/mobile/src/app/pages/cart/cart.page.scss
@@ -13,3 +13,9 @@
     padding: 15px;
     
 }
+.prod-img {
+    height: 115px;
+    min-width: 110px;
+    border-radius: 20px;
+    background-color: #cdcdcd;
+}
