--- a/mobile/src/app/pages/cart/cart.page.scss
+++ b/mobile/src/app/pages/cart/cart.page.scss
@@ -19,3 +19,9 @@
     border-radius: 20px;
     background-color: #cdcdcd;
 }
+.prod-info{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
