--- a/mobile/src/app/pages/cart/cart.page.scss
+++ b/mobile/src/app/pages/cart/cart.page.scss
@@ -32,4 +32,7 @@
     flex-direction: row;
     justify-content: space-between;
 }
-
+.prod-name{
+    font-size: 24px;
+    font-family: "rubik-medium";
+}
