--- a/mobile/src/app/pages/cart/cart.page.scss
+++ b/mobile/src/app/pages/cart/cart.page.scss
@@ -65,3 +65,9 @@ ion-button{
 .total-wrapper{
     justify-content: space-between;
 }
+.title-price{
+    padding-left: 5px;
+     font-size: 1.1rem;
+     font-weight: bold;
+     color: hsl(0, 0%, 40%);
+ }
