--- a/mobile/src/app/pages/pages.page.html
+++ b/mobile/src/app/pages/pages.page.html
@@ -8,7 +8,7 @@
       <ion-icon src="assets/category.svg"></ion-icon>
      
     </ion-tab-button>
-    <ion-tab-button tab="carttab">
+    <ion-tab-button tab="cart">
       <ion-icon name="cart-outline"></ion-icon>
     
     </ion-tab-button>
