Add search component on home page & fix the bug

--- a/mobile/src/app/pages/hometab/hometab.page.html
+++ b/mobile/src/app/pages/hometab/hometab.page.html
@@ -3,7 +3,7 @@
     <ion-row>
       <ion-col>
         <div class="searchbar">
-          //implement search here
+          <app-search></app-search><button  class="filter-btn"><ion-icon src='../../../assets/settings-sliders.svg'></ion-icon></button>
         </div>
        
       </ion-col>
