--- a/mobile/src/app/components/search/search.component.html
+++ b/mobile/src/app/components/search/search.component.html
@@ -1,7 +1,7 @@
 
 <div class="search">
   <ion-icon slot="icon-only" name="search"></ion-icon>
-  <input type="search" placeholder="Search"/>
+  <input (keyup)="onSearch($event)" (focus)="onInputFocus()" (blur)="onInputBlur()" type="search" placeholder="Search"/>
 
 </div>
 
