--- a/mobile/src/app/pages/pages.page.html
+++ b/mobile/src/app/pages/pages.page.html
@@ -16,7 +16,7 @@
       <ion-icon src="assets/heart.svg"></ion-icon>
      
     </ion-tab-button>
-    <ion-tab-button tab="account">
+    <ion-tab-button tab="accounttab">
       <ion-icon name="person-outline"></ion-icon>
      
     </ion-tab-button>
