--- a/mobile/src/app/pages/categorytab/categorytab.page.html
+++ b/mobile/src/app/pages/categorytab/categorytab.page.html
@@ -11,7 +11,7 @@
     <ion-row class="ion-align-items-center">
       <ion-col size="3" size-md="3" *ngFor="let category of categories">
         <div class="category-card" animated="true">
-          <img class="category-avatar" [src]="category.img" alt="{{category.name}}" />
+          <img class="category-avatar" [src]="'http://127.0.0.1/grocery-app/backend/' + category.img" alt="{{category.name}}" />
           <div class="category-title">{{category.name}}</div>
         </div>
       </ion-col>
@@ -19,6 +19,7 @@
   </ion-grid>
 
 </ion-content>
+
 
 
 
