Update the categories on the(HOMETAB)

--- a/mobile/src/app/pages/hometab/hometab.page.html
+++ b/mobile/src/app/pages/hometab/hometab.page.html
@@ -36,7 +36,7 @@
         <div class="scroll" >
           <div class="catname"  *ngFor="let category of categories">
             <div>
-              <!-- {{category.name}} -->
+               {{category.name}}
             </div>
           </div>
           
