--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -15,14 +15,14 @@
     </div>
 
     <ion-list class="profile-options">
-      <ion-item button detail="true">
-        <ion-icon name="cart" slot="start"></ion-icon>
+      <ion-item button detail="true" routerLink="/pages/carttab">
+        <ion-icon name="cart" slot="start" ></ion-icon>
         <ion-label>
           <h3>My Orders</h3>
           <p>Already have 3 orders</p>
         </ion-label>
       </ion-item>
-      <ion-item button detail="true">
+      <ion-item button detail="true" (click)="openAddressChange()">
         <ion-icon name="map" slot="start"></ion-icon>
         <ion-label>
           <h3>Shipping Addresses</h3>
