--- a/mobile/src/app/pages/hometab/hometab.page.scss
+++ b/mobile/src/app/pages/hometab/hometab.page.scss
@@ -31,7 +31,10 @@ ion-searchbar{
         border-radius: 50px;
     } 
 }
-
+.title{
+    font-weight: 600;
+    font-size: 17px;
+}
 
 .scroll{
     display: flex;
