--- a/mobile/src/app/pages/detailspage/detailspage.page.scss
+++ b/mobile/src/app/pages/detailspage/detailspage.page.scss
@@ -30,8 +30,14 @@ ion-button {
 .product-img {
 height: 40vh;
 width: 100%;
+overflow: hidden; 
 background-color: #f2f3f2;
 border-radius: 0px 0px 25px 25px;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 @media (min-width: 768px) {
@@ -110,8 +116,9 @@ padding: 10px 5px 10px 5px;
 .content{
     font-family: "Gilroy-Medium", Helvetica;
     font-weight: 400;
-    color: #7c7c7c;
-    font-size: 13px;
+    color: #252525;
+    font-size: 14px;
+    padding-left: 15px;
 }
 
 }
@@ -156,5 +163,17 @@ padding: 10px 5px 10px 5px;
     background-color: white !important;
     border-radius: 10px;
     padding: 20px;
+}
+
+.detail-list{
+    font-family: "Gilroy-Medium", Helvetica;
+    padding-left: 15px;
+    margin: 0;
+    color: #252525;
+    font-size: 14px;
+}
+.detail-list li { 
+    margin-bottom: 10px;
+
 }
 
