--- a/mobile/src/app/pages/hometab/hometab.page.scss
+++ b/mobile/src/app/pages/hometab/hometab.page.scss
@@ -1,37 +1,36 @@
-ion-searchbar{
+.search-and-filter-container {
+    display: flex;
+    align-items: center;
+    position: relative; /* Aligns items vertically in the center */
+  }
+  
+  .search-container {
+    flex-grow: 1; /* Allows the search container to take up available space */
+    position: relative; /* Position relative for absolute positioning of search results */
+  }
+  
+  .filter-btn {
+    margin-left: 10px; /* Adjust as needed */
+    width: 20px;
+    height: 20px;
+    color: var(--ion-color-medium);
+    background-color: transparent;
+    border: none;
+    font-size: 1.1em;
+    cursor: pointer;
+    border-radius: 50%;
+  }
+
+  
+  app-search {
+    flex-grow: 1;
     --background: white;
     --border-radius: 20px;
     padding: 0 2px;
     --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-}
-.searchbar{
-    position: relative;
-    .filter-btn{
-        position: absolute;
-        top:35%;
-        right:3%;
-        width: 20px;
-        height: 20px;
-        color: var(--ion-color-medium);
-        background-color: transparent;
-        border: 0;
-        font-size: 1.1em;
-        cursor: pointer;
-        border-radius: 50%;
-    }
-}
-
-.search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-       
-    img {
-        height: 50%; 
-        border-radius: 50px;
-    } 
-}
-
+  }
+  
+  
 
 .scroll{
     display: flex;
