--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -15,7 +15,7 @@
     </div>
 
     <ion-list class="profile-options">
-      <ion-item button detail="true" routerLink="/pages/carttab">
+      <ion-item button detail="true" routerLink="/pages/cart">
         <ion-icon name="cart" slot="start" ></ion-icon>
         <ion-label>
           <h3>My Orders</h3>
@@ -29,14 +29,14 @@
           <p>4 addresses</p>
         </ion-label>
       </ion-item>
-      <ion-item button detail="true">
+      <ion-item button detail="true" (click)="openPaymentMethodChange()">
         <ion-icon name="wallet" slot="start"></ion-icon>
         <ion-label>
           <h3>Payment Methods</h3>
           <p>Visa ...23</p>
         </ion-label>
       </ion-item>
-      <ion-item button detail="true">
+      <ion-item button detail="true" (click)="openSettings()">
         <ion-icon name="settings" slot="start"></ion-icon>
         <ion-label>
           <h3>Settings</h3>
