add fetchwishlist endpoint

--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -40,7 +40,7 @@
         <ion-icon name="settings" slot="start"></ion-icon>
         <ion-label>
           <h3>Settings</h3>
-          <p>Notification, password</p>
+          <p> password</p>
         </ion-label>
       </ion-item>
     </ion-list>
