--- a/mobile/src/app/pages/wishlisttab/wishlisttab.page.html
+++ b/mobile/src/app/pages/wishlisttab/wishlisttab.page.html
@@ -12,7 +12,7 @@
         <ion-icon class="empty-wish" slot="icon-only" src = "assets/empty-wishlist.svg"></ion-icon>
         <p class="one">Your wishlist is empty!</p>
         <p class="two">Explore more and shortlist some items</p>
-        <ion-button routerLink="/pages/home">
+        <ion-button routerLink="/pages/hometab">
           START SHOPPING
         </ion-button>
     </div>
