--- a/mobile/src/app/pages/detailspage/detailspage.page.scss
+++ b/mobile/src/app/pages/detailspage/detailspage.page.scss
@@ -177,3 +177,12 @@ padding: 10px 5px 10px 5px;
 
 }
 
+.before{
+    text-decoration: line-through;   
+}
+
+.before >span{
+    padding: 2px 0;
+    font-size: 1em;
+}
+
