--- a/mobile/src/app/components/product-card/product-card.component.html
+++ b/mobile/src/app/components/product-card/product-card.component.html
@@ -4,12 +4,12 @@
         {{item.discount+'%'}}
       </div>
       <div class="image_wrapper">
-        <img class="item-img" src={{item.img}} />
+        <img class="item-img" src={{item.img}} (click)="gotodetails(item)"/>
         <app-liked class="like" [item]="item" ></app-liked>   
       </div> 
       <ion-card-content >
-        <span > {{item?.name}}</span>
-        <div class="price">&cent; <span class="before" *ngIf="item.discount>0">{{item.price_before}}</span> {{item?.final_price}}</div> 
+        <span (click)="gotodetails(item)"> {{item?.name}}</span>
+        <div class="price">EGP <span class="before" *ngIf="item.discount>0">{{item.price_before}}</span> {{item?.final_price}}</div> 
         <div class="itemadd">
           <app-addcart-btn [item]="item"></app-addcart-btn>
         </div>
