--- a/mobile/src/app/pages/cart/cart.page.scss
+++ b/mobile/src/app/pages/cart/cart.page.scss
@@ -18,7 +18,14 @@
     min-width: 110px;
     border-radius: 20px;
     background-color: #cdcdcd;
+    overflow: hidden;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
+
 .prod-info{
     width: 100%;
     display: flex;
