Modify the checkout button to store items into database

--- a/mobile/src/app/pages/cart/cart.page.html
+++ b/mobile/src/app/pages/cart/cart.page.html
@@ -97,7 +97,7 @@
         <div class="price">EGP {{total | number:'1.2-2'}}</div>
       </ion-col>
       <ion-col class="checkout" size="8">
-        <ion-button fill="clear" shape="round" routerLink="/pages/checkout">
+        <ion-button fill="clear" shape="round" routerLink="/pages/checkout" (click)=checkout()>
           Checkout
         </ion-button>
         
