--- a/mobile/src/app/pages/detailspage/detailspage.page.html
+++ b/mobile/src/app/pages/detailspage/detailspage.page.html
@@ -15,7 +15,7 @@
           <div class="item">
             <div class="item-name">{{item.name}}</div>
             <div class="purchase-container">
-              <img  src="assets/shopping-bag.png" class="purchase-icon"/>
+              <img  src="assets\people.png" class="purchase-icon"/>
               <div class="purchase-count">{{generalpurchase}}</div>
              </div>
           </div>
