update last24hrs purchase

--- a/mobile/src/app/pages/detailspage/detailspage.page.html
+++ b/mobile/src/app/pages/detailspage/detailspage.page.html
@@ -17,6 +17,8 @@
             <div class="purchase-container">
               <img  src="assets/shopping-bag.png" class="purchase-icon"/>
               <div class="purchase-count">{{generalpurchase}}</div>
+              <img  src="assets/clock.png" class="purchase-icon"/>
+              <div class="purchase-count">{{last24hrs}}</div>
              </div>
           </div>
           <app-liked [item] = "item" slot = "end"></app-liked>
