--- a/mobile/src/app/pages/detailspage/detailspage.page.scss
+++ b/mobile/src/app/pages/detailspage/detailspage.page.scss
@@ -28,16 +28,18 @@ ion-button {
 }
 
 .product-img {
-height: 40vh;
-width: 100%;
-overflow: hidden; 
-background-color: #f2f3f2;
-border-radius: 0px 0px 25px 25px;
-    img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  height: 40vh;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 0px 0px 25px 25px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 0px 0px 25px 25px;
+    border: 3px solid #fff;
+  }
 }
 
 @media (min-width: 768px) {
