--- a/mobile/src/app/pages/detailspage/detailspage.page.html
+++ b/mobile/src/app/pages/detailspage/detailspage.page.html
@@ -25,13 +25,13 @@
         </ion-item>
         <ion-item class="wrapper-2">
           <div class="quantity" slot="start">
-            <ion-icon name="remove-outline" (click)="decreaseQuantity()"></ion-icon>
+            <ion-icon name="remove-outline" (click)="decreaseQuantity(item)"></ion-icon>
 
             <div class="rectangle">
               <div class="no">{{ item.quantity }}</div>
             </div>
 
-            <ion-icon name="add-outline" (click)="increaseQuantity()"></ion-icon>
+            <ion-icon name="add-outline" (click)="increaseQuantity(item)"></ion-icon>
           </div>
           <div class="price" slot="end">EGP <span class="before" *ngIf="item.discount > 0">{{ item.price_before }}</span> {{ item.final_price }}</div>
         </ion-item>
