--- a/mobile/src/app/pages/accounttab/accounttab.page.html
+++ b/mobile/src/app/pages/accounttab/accounttab.page.html
@@ -7,10 +7,12 @@
 <ion-content class="ion-padding" [fullscreen]="true">
   <div class="profile-container">
     <div class="profile-header">
-      <div class="profile-image"></div>
+      <div class="profile-image"> 
+        <img *ngIf="userInfo.photo" [src]="userInfo.photo" alt="User Photo" class="profile-image">
+      </div>
       <div class="profile-info">
-        <h2 class="profile-name">Rewan Abubaker</h2>
-        <p class="profile-email">example.com</p>
+        <h2 class="profile-name">{{userInfo.firstname}} {{userInfo.lastname}}</h2>
+        <p class="profile-email">{{userInfo.email}}</p>
       </div>
     </div>
 
@@ -19,28 +21,28 @@
         <ion-icon name="cart" slot="start" ></ion-icon>
         <ion-label>
           <h3>My Orders</h3>
-          <p>Already have 3 orders</p>
+          
         </ion-label>
       </ion-item>
       <ion-item button detail="true" (click)="openAddressChange()">
         <ion-icon name="map" slot="start"></ion-icon>
         <ion-label>
           <h3>Shipping Addresses</h3>
-          <p>4 addresses</p>
+          
         </ion-label>
       </ion-item>
       <ion-item button detail="true" (click)="openPaymentMethodChange()">
         <ion-icon name="wallet" slot="start"></ion-icon>
         <ion-label>
           <h3>Payment Methods</h3>
-          <p>Visa ...23</p>
+          
         </ion-label>
       </ion-item>
       <ion-item button detail="true" (click)="openSettings()">
         <ion-icon name="settings" slot="start"></ion-icon>
         <ion-label>
-          <h3>Settings</h3>
-          <p> password</p>
+          <h3>Change Password</h3>
+         
         </ion-label>
       </ion-item>
     </ion-list>
