--- a/mobile/src/app/pages/accounttab/accounttab.page.scss
+++ b/mobile/src/app/pages/accounttab/accounttab.page.scss
@@ -34,7 +34,7 @@
   }
   
   ion-item {
-    --background: #fff;
+    --background: #070000;
     --border-color: #e0e0e0;
     --border-style: solid;
     --border-width: 1px;
