--- a/mobile/src/app/components/address-change/address-change.component.html
+++ b/mobile/src/app/components/address-change/address-change.component.html
@@ -11,16 +11,23 @@
       <ion-input type="text" [(ngModel)]="address.street" name="street"></ion-input>
     </ion-item>
 
+
+    <!-- State -->
+    <ion-item>
+      <ion-label position="floating">State</ion-label>
+      <ion-input type="text" [(ngModel)]="address.state" name="state"></ion-input>
+    </ion-item>
+
     <!-- City -->
     <ion-item>
       <ion-label position="floating">City</ion-label>
       <ion-input type="text" [(ngModel)]="address.city" name="city"></ion-input>
     </ion-item>
 
-    <!-- State -->
+    <!-- Country -->
     <ion-item>
-      <ion-label position="floating">State</ion-label>
-      <ion-input type="text" [(ngModel)]="address.state" name="state"></ion-input>
+      <ion-label position="floating">Country</ion-label>
+      <ion-input type="text" [(ngModel)]="address.country" name="country"></ion-input>
     </ion-item>
 
     <!-- Zip Code -->
