add payment-method -change php file and service file

--- a/mobile/src/app/components/payment-method-change/payment-method-change.component.html
+++ b/mobile/src/app/components/payment-method-change/payment-method-change.component.html
@@ -14,6 +14,12 @@
       <ion-input type="text" [(ngModel)]="paymentMethod.cardNumber" name="cardNumber"></ion-input>
     </ion-item>
 
+    <ion-item>
+      <ion-label position="floating">Name On Card</ion-label>
+      <ion-input type="text" [(ngModel)]="paymentMethod.nameOnCard" name="nameOnCard"></ion-input>
+    </ion-item>
+
+
     <!-- Expiration Date -->
     <ion-item>
       <ion-label position="floating">Expiration Date</ion-label>
